CHANGELOG VERSIONX

VersionX 1.0 Beta1 (to be released)
===================================
- #20: Translated resource field names, yes/no and some error messages in revision details window / getlist processor
- #2: Added pagination to resource overview
- Added Russian translation (elastic)

VersionX 1.0 Alpha3 (Released 14/1/2010)
========================================
- [#13] Added a few more lexicon strings, improved some error handling, improved code readability
- [#4/#6/#14] Updated grid list processor for usability (date formatting, boolean is now yes/no, editedby (and similar) now gives users full name, template shows template name..
- [#11] Increased width of modal windows. Moved content to its own tab in view details window.
- [#10] Rewrote processor request for restore to make it functional again.
- Renamed processor files to lowercase to prevent it from failing.
- [#15] Removed slash for better path handling (smooth-graphics)
- [#9/#15] Better distribution of columns in main grid (smooth-graphics)
- [#10] Remove mention of an overview from lexicons
- [#17] Added changelog to the installer / build
- [#13] Changed modified/created/restored values to lexicon references.

VersionX 1.0 Alpha2 (Released 11/01/2011)
=========================================
- [#9] Added readme & license
- [#8] General improvement lexicon (smooth-graphics)
- Fixed fatal IE issue (breaking on "class" and "new")
- Fixed fatal issue when a new resource has been created.
- [#3] Added german translation (smooth-graphics)